--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -17,12 +17,32 @@
    "outputs": [],
    "execution_count": null,
    "source": [
+    "import torch\n",
+    "print(\"CUDA disponible :\", torch.cuda.is_available())\n",
+    "if torch.cuda.is_available():\n",
+    "    print(\"GPU utilisé :\", torch.cuda.get_device_name(0))\n",
+    "else:\n",
+    "    print(\"⚠️ Aucun GPU détecté. L'exécution se fera sur le CPU.\")"
+   ],
+   "id": "97ff8bba9c60f70b"
+  },
+  {
+   "metadata": {},
+   "cell_type": "code",
+   "outputs": [],
+   "execution_count": null,
+   "source": [
     "# 🔥 2. Charger le modèle (float32 pour compatibilité maximale)\n",
     "from diffusers import StableDiffusionPipeline\n",
     "import torch\n",
     "\n",
     "device = \"cuda\" if torch.cuda.is_available() else \"cpu\"\n",
-    "pipe = StableDiffusionPipeline.from_pretrained(\"CompVis/stable-diffusion-v1-4\")\n",
+    "print(\"💻 Appareil utilisé :\", device)\n",
+    "\n",
+    "pipe = StableDiffusionPipeline.from_pretrained(\n",
+    "    \"CompVis/stable-diffusion-v1-4\",\n",
+    "    torch_dtype=torch.float32  # Utilisation de float32 pour compatibilité maximale\n",
+    ")\n",
     "pipe.to(device)"
    ],
    "id": "dd4e799883d2da0f"
